Add share policy note and remove Gridiot label

--- a/footer.html
+++ b/footer.html
@@ -4,10 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>NH48pics Footer – Links</title>
-<base href="https://www.nh48pics.com/" target="_top">
-
-<!-- Make all links open in the top window by default (escape the iframe) -->
-<base target="_top">
+<base href="https://nh48.info/" target="_top">
 
 <style>
   :root{
@@ -84,21 +81,21 @@
           <span class="text">Project Overview<span class="sub">Howker Ridge landing page</span></span>
         </a>
 
-        <a class="btn web" href="https://www.nh48pics.com/hrt-trail-map" target="_blank" rel="noopener noreferrer">
+        <a class="btn web" href="/howker-ridge-interactive-map">
           <span class="icon" aria-hidden="true">
             <img src="https://static.wixstatic.com/media/66b1b2_28672dbcb1514038b7656139137c4a05~mv2.png" alt="Trail Map icon">
           </span>
           <span class="text">Howker Ridge Trail Map<span class="sub">Interactive trail map &amp; POIs</span></span>
         </a>
 
-        <a class="btn web" href="https://www.nh48pics.com/hrt-plant-catalog" target="_blank" rel="noopener noreferrer">
+        <a class="btn web" href="/howker-plant-catalog">
           <span class="icon" aria-hidden="true">
             <img src="https://static.wixstatic.com/media/66b1b2_ae699f4f2e4f4f28b7734c32b8cbfedc~mv2.png" alt="Plant catalog icon">
           </span>
           <span class="text">Plant Catalog<span class="sub">Howker Ridge alpine flora</span></span>
         </a>
 
-        <a class="btn web" href="https://www.nh48pics.com/hrt-projects" target="_blank" rel="noopener noreferrer">
+        <a class="btn web" href="/howker-ridge-conditions">
           <span class="icon" aria-hidden="true">
             <img src="https://static.wixstatic.com/media/66b1b2_9d069d65e7fc43059106f805a45de873~mv2.png" alt="Projects icon">
           </span>
@@ -138,7 +135,28 @@
           <span class="text">White Mountain Trails App<span class="sub">Trail explorer on nh48.info</span></span>
         </a>
       </section>
+
+      <!-- More Resources -->
+      <section class="col" aria-label="More resources">
+        <h3>More Resources</h3>
+
+        <a class="btn web" href="/howker-ridge-info">
+          <span class="icon" aria-hidden="true">🧭</span>
+          <span class="text">Howker Ridge Info<span class="sub">Facilities &amp; safety</span></span>
+        </a>
+
+        <a class="btn web" href="/howker-ridge-conditions">
+          <span class="icon" aria-hidden="true">🌦️</span>
+          <span class="text">Live Trail Conditions<span class="sub">Weather &amp; snowpack</span></span>
+        </a>
+
+        <a class="btn web" href="/howker-ridge-interactive-map">
+          <span class="icon" aria-hidden="true">🗺️</span>
+          <span class="text">Interactive Trail Map<span class="sub">Fly to POIs &amp; report issues</span></span>
+        </a>
+      </section>
     </div>
+    <p class="note">Share Policy: Free/Open sharing policy for all individual photos &amp; posts with ig credit: @nate_dumps_pics. All photos are inherently copyrighted prohibiting reprint &amp; direct monetization unless otherwise stated.</p>
   </div>
 </div>
 </body>
