--- a/social_card.html
+++ b/social_card.html
@@ -482,12 +482,12 @@
         <!-- Tagline: show single-line on desktop, two-line on mobile -->
 		<div class="title">
 		  <!-- Desktop view: one line with bullets -->
-		  <span class="title-desktop">New Hampshire Photographer • RMC Trail Adopter • “Gridiot”</span>
+		  <span class="title-desktop">New Hampshire Photographer • RMC Trail Adopter</span>
 
 		  <!-- Mobile view: first line without bullet; second line with bullet -->
 		  <span class="title-mobile">
 			<span>New Hampshire Photographer</span><br>
-			<span>RMC Trail Adopter • “Gridiot”</span>
+			<span>RMC Trail Adopter</span>
 		  </span>
 		</div>
 
