Update Howker Ridge links to nh48.info

--- a/footer.html
+++ b/footer.html
@@ -81,14 +81,14 @@
           <span class="text">Project Overview<span class="sub">Howker Ridge landing page</span></span>
         </a>
 
-        <a class="btn web" href="/howker-ridge-interactive-map">
+        <a class="btn web" href="https://nh48.info/howker-ridge">
           <span class="icon" aria-hidden="true">
             <img src="https://static.wixstatic.com/media/66b1b2_28672dbcb1514038b7656139137c4a05~mv2.png" alt="Trail Map icon">
           </span>
           <span class="text">Howker Ridge Trail Map<span class="sub">Interactive trail map &amp; POIs</span></span>
         </a>
 
-        <a class="btn web" href="/howker-ridge-conditions">
+        <a class="btn web" href="https://nh48.info/howker-ridge">
           <span class="icon" aria-hidden="true">
             <img src="https://static.wixstatic.com/media/66b1b2_9d069d65e7fc43059106f805a45de873~mv2.png" alt="Projects icon">
           </span>
@@ -121,7 +121,7 @@
           <span class="text">nate_dumps_vids<span class="sub">YouTube</span></span>
         </a>
 
-        <a class="btn web" href="/howker-plant-catalog">
+        <a class="btn web" href="https://nh48.info/plant-catalog">
           <span class="icon" aria-hidden="true">
             <img src="https://static.wixstatic.com/media/66b1b2_ae699f4f2e4f4f28b7734c32b8cbfedc~mv2.png" alt="Plant catalog icon">
           </span>
@@ -133,17 +133,17 @@
       <section class="col" aria-label="More resources">
         <h3>More Resources</h3>
 
-        <a class="btn web" href="/howker-ridge-info">
+        <a class="btn web" href="https://nh48.info/projects/hrt-info">
           <span class="icon" aria-hidden="true">🧭</span>
           <span class="text">Howker Ridge Info<span class="sub">Facilities &amp; safety</span></span>
         </a>
 
-        <a class="btn web" href="/howker-ridge-conditions">
+        <a class="btn web" href="https://nh48.info/howker-ridge">
           <span class="icon" aria-hidden="true">🌦️</span>
           <span class="text">Live Trail Conditions<span class="sub">Weather &amp; snowpack</span></span>
         </a>
 
-        <a class="btn web" href="/howker-ridge-interactive-map">
+        <a class="btn web" href="https://nh48.info/howker-ridge">
           <span class="icon" aria-hidden="true">🗺️</span>
           <span class="text">Interactive Trail Map<span class="sub">Fly to POIs &amp; report issues</span></span>
         </a>
