--- a/howker_trail_conditions.html
+++ b/howker_trail_conditions.html
@@ -8,10 +8,10 @@
 <meta name="description" content="Live Mount Madison & Howker Ridge conditions: NWS forecast & alerts, 24-hour snowfall, snow depth, freezing level, White Mountain National Forest notices, and detailed trail metadata.">
 
 <!-- SEO / social -->
-<link rel="canonical" href="https://nh48pics.com/howker-ridge-conditions">
+<link rel="canonical" href="https://nh48.info/howker-ridge">
 <meta name="robots" content="index,follow,max-image-preview:large">
 <meta property="og:site_name" content="NH48 Pics">
-<meta property="og:url" content="https://nh48pics.com/howker-ridge-conditions">
+<meta property="og:url" content="https://nh48.info/howker-ridge">
 <meta property="og:title" content="Mount Madison • Howker Ridge — Live Trail Conditions">
 <meta property="og:description" content="NWS forecast & alerts plus snow depth, 24h snowfall, and freezing level for Mount Madison. Includes detailed Howker Ridge trail info.">
 <meta name="twitter:card" content="summary_large_image">
@@ -25,9 +25,9 @@
   "name": "Mount Madison • Howker Ridge — Current Conditions",
   "description": "Live Mount Madison & Howker Ridge conditions: NWS forecast & alerts, 24-hour snowfall, snow depth, freezing level, WMNF notices, and detailed trail metadata.",
   "inLanguage": "en-US",
-  "url": "https://nh48pics.com/howker-ridge-conditions",
+  "url": "https://nh48.info/howker-ridge",
   "author": {"@type": "Person", "name": "Nathan Sobol"},
-  "isPartOf": {"@type": "WebSite", "name": "NH48 Pics", "url": "https://nh48pics.com"},
+  "isPartOf": {"@type": "WebSite", "name": "NH48 Pics", "url": "https://nh48.info"},
   "about": {"@type": "Place", "name": "Mount Madison (Howker Ridge)", "geo": {"@type": "GeoCoordinates", "latitude": 44.3288173, "longitude": -71.2767796}}
 }
 </script>
