--- a/nh48cta.html
+++ b/nh48cta.html
@@ -404,10 +404,10 @@
     <div class="nh-card-body hrt-card">
       <p class="nh-card-text hrt-heading">Explore Howker Ridge Projects</p>
       <nav class="hrt-nav">
-        <a href="https://www.nh48pics.com/hrt-plant-catalog" target="_blank" rel="noopener">Plant Catalog</a>
-        <a href="https://www.nh48pics.com/hrt-trail-map" target="_blank" rel="noopener">Trail Map</a>
-        <a href="https://www.nh48pics.com/hrt-info" target="_blank" rel="noopener">Trail Info</a>
-        <a href="https://www.nh48pics.com/howker-data" target="_blank" rel="noopener">Trail Conditions</a>
+        <a href="https://nh48.info/plant-catalog" target="_blank" rel="noopener">Plant Catalog</a>
+        <a href="https://nh48.info/howker-ridge" target="_blank" rel="noopener">Trail Map</a>
+        <a href="https://nh48.info/projects/hrt-info" target="_blank" rel="noopener">Trail Info</a>
+        <a href="https://nh48.info/howker-ridge" target="_blank" rel="noopener">Trail Conditions</a>
       </nav>
     </div>
   </div>
