--- a/project_landing_page.html
+++ b/project_landing_page.html
@@ -158,7 +158,7 @@
       <p class="meta">POIs • Issue logging • Base-map styles</p>
       <p>Mobile-ready Leaflet map covering the entire Howker Ridge line. Fly to curated points of interest, switch among dark/light/topo layers, and report blowdowns or erosion. Built by volunteers for quick field checks and post-hike documentation.</p>
       <div class="spacer"></div>
-      <a class="btn" href="/howker-ridge-interactive-map">Open Map</a>
+      <a class="btn" href="https://nh48.info/howker-ridge">Open Map</a>
     </article>
 
     <!-- Live Conditions card -->
@@ -168,7 +168,7 @@
       <p class="meta">Forecasts • Snow depth • Freezing level</p>
       <p>Aggregated National Weather Service forecasts, alerts, snow-depth estimates, and freezing-level trends, plus links to WMNF notices. Check current weather and snowpack before you go—this tool is unofficial and maintained by volunteers.</p>
       <div class="spacer"></div>
-      <a class="btn" href="/howker-ridge-conditions">View Conditions</a>
+      <a class="btn" href="https://nh48.info/howker-ridge">View Conditions</a>
     </article>
 
     <!-- Plant Catalog card -->
@@ -178,7 +178,7 @@
       <p class="meta">Field photos • Common &amp; Latin names</p>
       <p>Browse high-elevation flora from Howker Ridge and nearby summits—including bilberry, Labrador tea, mountain ash, and more. Each entry provides photos, identification tips, and habitat context for the Presidential Range.</p>
       <div class="spacer"></div>
-      <a class="btn" href="/howker-plant-catalog">Browse Catalog</a>
+      <a class="btn" href="https://nh48.info/plant-catalog">Browse Catalog</a>
     </article>
 
     <!-- Trail Info card -->
@@ -189,7 +189,7 @@
       <p class="meta">Route description • Facilities • Safety</p>
       <p>Learn about the strenuous, scenic Howker Ridge Trail leading to Mount Madison—operational hours, trailhead coordinates, directions, amenities, and cautions. Based on official White Mountain National Forest information; always consult up-to-date maps and regulations before hiking.</p>
       <div class="spacer"></div>
-      <a class="btn" href="/howker-ridge-info">Trail Details</a>
+      <a class="btn" href="https://nh48.info/projects/hrt-info">Trail Details</a>
     </article>
   </section>
 
