--- a/social_card.html
+++ b/social_card.html
@@ -513,7 +513,7 @@
         </a>
 
         <!-- Peakbagger’s Journal web app -->
-        <a class="link" href="https://www.nh48.app/?utm_source=links&amp;utm_medium=social&amp;utm_campaign=peakbagger" target="_blank" rel="noopener noreferrer" aria-label="Open Peakbagger’s Journal Web app">
+        <a class="link" href="https://nh48.app/?utm_source=links&amp;utm_medium=social&amp;utm_campaign=peakbagger" target="_blank" rel="noopener noreferrer" aria-label="Open Peakbagger’s Journal Web app">
           <span class="icon app-logo" aria-hidden="true"><img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_6dfce097ed584b5296afeb83f26e4c8a~mv2.png" alt="Peakbagger logo" /></span>
           <span class="txt">
             <span>Peakbagger’s Journal Web App</span>
@@ -543,7 +543,7 @@
         </a>
 
         <!-- Howker Ridge Projects (now HRT Projects) with stacked icons -->
-        <a class="link" href="https://www.nh48pics.com/hrt-projects?utm_source=links&amp;utm_medium=social&amp;utm_campaign=howker" target="_blank" rel="noopener noreferrer" aria-label="Open HRT Projects landing">
+        <a class="link" href="https://nh48.info/projects/hrt-info?utm_source=links&amp;utm_medium=social&amp;utm_campaign=howker" target="_blank" rel="noopener noreferrer" aria-label="Open HRT Projects landing">
           <span class="icon stack" aria-hidden="true">
             <img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_28672dbcb1514038b7656139137c4a05~mv2.png" alt="Howker Ridge logo 1" />
             <img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_9d069d65e7fc43059106f805a45de873~mv2.png" alt="Howker Ridge logo 2" />
