Improve quick links metadata and image accessibility

--- a/social_card.html
+++ b/social_card.html
@@ -5,6 +5,17 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>NH48pics • Quick Links</title>
 <meta name="description" content="New Hampshire Photographer — Nate Sobol | nh48pics.com. Shop fine‑art prints and explore our White Mountains web apps." />
+<!-- Prevent client-side caching -->
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
+
+<!-- Social media metadata -->
+<meta property="og:title" content="NH48pics • Quick Links" />
+<meta property="og:description" content="Explore White Mountain web apps, shop prints and woodworking, and follow Nate Sobol on Instagram." />
+<meta property="og:image" content="https://static.wixstatic.com/media/66b1b2_ae7d4a9a1f6a410299a45f7cf4748203~mv2.jpg" />
+<meta property="og:url" content="https://www.nh48pics.com/links" />
+<meta property="twitter:card" content="summary_large_image" />
 
 <!-- Mobile browser chrome/overscroll color (iOS/Android) -->
 <meta name="theme-color" content="#0a0a0a" />
@@ -472,7 +483,7 @@
         <a class="avatar-wrap" href="https://www.nh48pics.com/?utm_source=links&amp;utm_medium=social&amp;utm_campaign=profile" target="_blank" rel="noopener noreferrer" aria-label="Open nh48pics.com profile image link">
           <div class="avatar">
             <!-- Photographer profile image -->
-            <img alt="Profile — New Hampshire Photographer, Nate Sobol" src="https://static.wixstatic.com/media/66b1b2_ae7d4a9a1f6a410299a45f7cf4748203~mv2.jpg" />
+            <img alt="Profile — New Hampshire Photographer, Nate Sobol" src="https://static.wixstatic.com/media/66b1b2_ae7d4a9a1f6a410299a45f7cf4748203~mv2.jpg" width="120" height="120" loading="lazy" />
             <canvas id="sparkle"></canvas>
           </div>
         </a>
@@ -480,7 +491,7 @@
         <div class="subtitle">
           Nate Sobol
           <!-- 4000 AMC badge image, sized like an emoji, alt text for accessibility -->
-          <img class="badge" src="https://static.wixstatic.com/media/66b1b2_383707cf8bac4e13889e96c3d6733ef0~mv2.jpeg" alt="AMC 4000 badge" />
+          <img class="badge" src="https://static.wixstatic.com/media/66b1b2_383707cf8bac4e13889e96c3d6733ef0~mv2.jpeg" alt="AMC 4000 badge" width="20" height="16" loading="lazy" />
           | 
           <span>nh48pics.com</span>
         </div>
@@ -504,7 +515,7 @@
       <nav class="links" aria-label="Primary links">
         <!-- Homepage -->
         <a class="link" href="https://www.nh48pics.com/?utm_source=links&amp;utm_medium=social&amp;utm_campaign=linkinbio" target="_blank" rel="noopener noreferrer" aria-label="Open nh48pics.com in a new tab">
-          <span class="icon" aria-hidden="true"><img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_40a2129fe8a9406d9edb3944d78b7164~mv2.png" alt="NH48pics logo" /></span>
+          <span class="icon" aria-hidden="true"><img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_40a2129fe8a9406d9edb3944d78b7164~mv2.png" alt="NH48pics logo" width="22" height="22" /></span>
           <span class="txt">
             <span>NH48pics.com Home</span>
             <span class="caption">Photography centered on New Hampshire’s White Mountains</span>
@@ -514,7 +525,7 @@
 
         <!-- Peakbagger’s Journal web app -->
         <a class="link" href="https://nh48.app/?utm_source=links&amp;utm_medium=social&amp;utm_campaign=peakbagger" target="_blank" rel="noopener noreferrer" aria-label="Open Peakbagger’s Journal Web app">
-          <span class="icon app-logo" aria-hidden="true"><img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_6dfce097ed584b5296afeb83f26e4c8a~mv2.png" alt="Peakbagger logo" /></span>
+          <span class="icon app-logo" aria-hidden="true"><img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_6dfce097ed584b5296afeb83f26e4c8a~mv2.png" alt="Peakbagger logo" width="22" height="22" /></span>
           <span class="txt">
             <span>Peakbagger’s Journal Web App</span>
             <span class="caption">Track hikes, summits, and progress across peak lists</span>
@@ -524,7 +535,7 @@
 
         <!-- NH48 API web app -->
         <a class="link" href="https://www.nh48.info/?utm_source=links&amp;utm_medium=social&amp;utm_campaign=nh48api" target="_blank" rel="noopener noreferrer" aria-label="Open NH48 API web app">
-          <span class="icon app-logo" aria-hidden="true"><img loading="lazy" src="nh48API_logo.png" alt="NH48 API logo" /></span>
+          <span class="icon app-logo" aria-hidden="true"><img loading="lazy" src="nh48API_logo.png" alt="NH48 API logo" width="22" height="22" /></span>
           <span class="txt">
             <span>NH48 API Web App</span>
             <span class="caption">Structured data for New Hampshire’s 4,000-foot mountains</span>
@@ -534,7 +545,7 @@
 
         <!-- WMNF Trails web app -->
         <a class="link" href="https://www.nh48.info/pages/trails_app.html?utm_source=links&amp;utm_medium=social&amp;utm_campaign=wmnftrails" target="_blank" rel="noopener noreferrer" aria-label="Open WMNF Trails web app">
-          <span class="icon app-logo" aria-hidden="true"><img loading="lazy" src="WMNF_Trails_API_logo.png" alt="WMNF Trails app logo" /></span>
+          <span class="icon app-logo" aria-hidden="true"><img loading="lazy" src="WMNF_Trails_API_logo.png" alt="WMNF Trails app logo" width="22" height="22" /></span>
           <span class="txt">
             <span>WMNF Trails Web App</span>
             <span class="caption">Explore White Mountain National Forest trails and routes</span>
@@ -545,9 +556,9 @@
         <!-- Howker Ridge Projects (now HRT Projects) with stacked icons -->
         <a class="link" href="https://nh48.info/projects/hrt-info?utm_source=links&amp;utm_medium=social&amp;utm_campaign=howker" target="_blank" rel="noopener noreferrer" aria-label="Open HRT Projects landing">
           <span class="icon stack" aria-hidden="true">
-            <img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_28672dbcb1514038b7656139137c4a05~mv2.png" alt="Howker Ridge logo 1" />
-            <img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_9d069d65e7fc43059106f805a45de873~mv2.png" alt="Howker Ridge logo 2" />
-            <img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_ae699f4f2e4f4f28b7734c32b8cbfedc~mv2.png" alt="Plant Catalog logo" />
+            <img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_28672dbcb1514038b7656139137c4a05~mv2.png" alt="Howker Ridge logo 1" width="22" height="22" />
+            <img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_9d069d65e7fc43059106f805a45de873~mv2.png" alt="Howker Ridge logo 2" width="22" height="22" />
+            <img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_ae699f4f2e4f4f28b7734c32b8cbfedc~mv2.png" alt="Plant Catalog logo" width="22" height="22" />
           </span>
           <span class="txt">
             <span>Howker Ridge Trail</span>
@@ -558,7 +569,7 @@
 
         <!-- Framed photos store -->
         <a class="link" href="https://www.nh48pics.com/category/framed-photos?utm_source=links&amp;utm_medium=social&amp;utm_campaign=framedprints" target="_blank" rel="noopener noreferrer" aria-label="Shop framed photos">
-          <span class="icon" aria-hidden="true">🖼</span>
+          <span class="icon" aria-hidden="true"><span role="img" aria-label="Framed photos">🖼</span></span>
           <span class="txt">
             <span>Shop Framed Photos</span>
             <span class="caption">Framed &amp; unframed WMNF photography, ready to hang</span>
@@ -568,7 +579,7 @@
 
         <!-- Woodworking store -->
         <a class="link" href="https://www.nh48pics.com/category/woodworking?utm_source=links&amp;utm_medium=social&amp;utm_campaign=woodworking" target="_blank" rel="noopener noreferrer" aria-label="Shop woodworking items">
-          <span class="icon" aria-hidden="true">🪵</span>
+          <span class="icon" aria-hidden="true"><span role="img" aria-label="Woodworking">🪵</span></span>
           <span class="txt">
             <span>Shop Woodworking</span>
             <span class="caption">Handcrafted wood pieces inspired by New Hampshire landscapes</span>
@@ -578,7 +589,7 @@
 
         <!-- Etsy shop -->
         <a class="link" href="https://www.etsy.com/shop/NH48pics?utm_source=links&amp;utm_medium=social&amp;utm_campaign=etsy" target="_blank" rel="noopener noreferrer" aria-label="Open Etsy shop in a new tab">
-          <span class="icon" aria-hidden="true"><img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_f4cf317552d0465eb0b87ff1f9ad1ff5~mv2.png" alt="Etsy logo" /></span>
+          <span class="icon" aria-hidden="true"><img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_f4cf317552d0465eb0b87ff1f9ad1ff5~mv2.png" alt="Etsy logo" width="22" height="22" /></span>
           <span class="txt">
             <span>Etsy Shop · Prints &amp; Stickers</span>
             <span class="caption">Prints and stickers featuring White Mountains photography</span>
@@ -588,7 +599,7 @@
 
         <!-- Instagram link -->
         <a class="link" href="https://www.instagram.com/nate_dumps_pics/?utm_source=links&amp;utm_medium=social&amp;utm_campaign=instagram" target="_blank" rel="noopener noreferrer" aria-label="Open Instagram profile">
-          <span class="icon" aria-hidden="true"><img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_888cea41098b42f0b5105b1d2814cff0~mv2.png" alt="Instagram logo" /></span>
+          <span class="icon" aria-hidden="true"><img loading="lazy" src="https://static.wixstatic.com/media/66b1b2_888cea41098b42f0b5105b1d2814cff0~mv2.png" alt="Instagram logo" width="22" height="22" /></span>
           <span class="txt">
             <span>Instagram @nate_dumps_pics</span>
             <span class="caption">Latest trips, photos &amp; videos</span>
